<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#ff3eaff9"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:background="#ffffffff">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="24sp"
            android:textColor="#ff3eaff9"
            android:layout_marginBottom="16dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/signupuser"
            android:hint="@string/username_title"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/signuppassword"
            android:inputType="textPassword"
            android:hint="@string/password_title"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/signupname"
            android:hint="@string/name1_title"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:background="#ff3eaff9"
            android:textColor="#ffffff"
            android:text="@string/button_Signup"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:onClick="clickSignUp"/>


    </LinearLayout>



</RelativeLayout>